# London-Traffic-Analysis

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
dbt/: dbt_project.yml  profiles.yml
dbt/models/: schema.yml
dbt/models/marts/: mart_borough_network_summary.sql  mart_borough_traffic_summary.sql  mart_road_density_by_borough.sql
dbt/models/staging/: sources.yml  stg_roads.sql  stg_traffic_counts.sql
docs/: dashboard.md  dashboard_description.md
pipeline/: Dockerfile  Makefile  docker-compose.yaml  ingest_dft_traffic.py  ingestion_os_roads.py  init.sql  requirements.txt  run_local.py
pipeline/dags/: london_pipeline.py
terraform/: .terraform.lock.hcl  main.tf  variables.tf
tests/: test_ingestion.py
